@@ -1,3 +1,9 @@
+spice-vdagent-0.12.1
+--------------------
+* Various bugfixes for multi-monitor and arbritary resolution support
+* Requires libXrandr >= 1.3, Note 0.12.0 also required this, but did not
+  check for it. For older distributions use 0.10.1
+
 spice-vdagent-0.12.0
 --------------------
 * Full multi-monitor and arbritary resolution support, this requires a new   
